--- a/templates/set/detail.html.twig
+++ b/templates/set/detail.html.twig
@@ -1,6 +1,21 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 {# {% if set != null %} #}
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+<ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+    <li><a href="{{ path('products_view_all') }}" class="nav-link px-2 link-secondary">Home</a></li>
+    <li><a href="{{ path('category_view_all') }}" class="nav-link px-2 link-dark">Category</a></li>
+    <li><a href="{{ path('set_view_all') }}" class="nav-link px-2 link-dark">Set</a></li>
+    <li><a href="{{ path('view_cart') }}" class="nav-link px-2 link-dark">Cart</a></li>
+    <li><a href="{{ path('view_bill') }}" class="nav-link px-2 link-dark">Bill</a></li>
+</ul>
+<div class="col-md-3 text-end">
+    <a href="{{ path('app_logout') }}" class="btn btn-outline-primary me-2">Logout</a>
+</div>
+</header>
 <table class="table table-responsive-md mt-3">
 <thead>
 <tr>
@@ -14,8 +29,10 @@
     <td>{{ set.id }}</td>
     <td>{{ set.setname }}</td>
     <td>
-        <a href="">Edit</a>
-        <a href="">Delete</a>
+        {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('set_delete', {'id': set.id }) }}" class="btn btn-danger" onclick="return confirm('do you want to delete this set?')">Delete</a>
+        <a href="{{ path('set_edit', {'id': set.id }) }}" class="btn btn-warning">Edit</a>
+        {% endif %}
     </td>
 </tr>
 </tbody>
