--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -8,7 +8,7 @@
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
         </a>
 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+    <li><a href="{{ path('products_view_all') }}" class="nav-link px-2 link-secondary">Home</a></li>
     <li><a href="{{ path('category_view_all') }}" class="nav-link px-2 link-dark">Category</a></li>
     <li><a href="{{ path('set_view_all') }}" class="nav-link px-2 link-dark">Set</a></li>
     <li><a href="{{ path('view_cart') }}" class="nav-link px-2 link-dark">Cart</a></li>
@@ -32,7 +32,7 @@
 <tr>
     <td>{{ bill.id }}</td>
     <td>{{ bill.email }}</td>
-    <td>{{ bill.total }}</td>
+    <td>{{ bill.total }}$</td>
     <td>{{ bill.status }}</td>
     <td>{{ bill.date|date('Y-m-d') }}</td>
     <td>
