--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,44 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    <section class="vh-100" style="background-color: #60B2D5;">
+		<div class="container py-5 h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col col-xl-10">
+					<div class="card" style="border-radius: 1rem;">
+						<div class="row g-0">
+							<div class="col-md-6 col-lg-5 d-none d-md-block">
+								<img src="https://i.guim.co.uk/img/media/cb7ad7983650acd1455e05dd0468a549e29885e1/0_448_6720_4032/master/6720.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=8b9674e92571760daa290011da3def41" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+							</div>
+							<div class="col-md-6 col-lg-7 d-flex align-items-center">
+								<div class="card-body p-4 p-lg-5 text-black">
+                                        <div class="d-flex align-items-center mb-3 pb-1">
+											<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+											<span class="h1 fw-bold mb-0">Shopping Cart Register</span>
+										</div>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Register a new account</h5>
+                                        {{ form_start(registrationForm) }}
+                                        {{ form_row(registrationForm.username) }}
+                                        {{ form_row(registrationForm.plainPassword, {
+                                            label: 'Password'
+                                        }) }}
+                                        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                                        <button type="submit" class="btn btn-info">Register</button>
+                                        {{ form_end(registrationForm) }}
+										<p class="mb-5 pb-lg-2" style="color: #393f81;">Have an account?
+											<a href="{{ path('app_login') }}" style="color: #393f81;">Login here</a>
+										</p>
+										<a href="#!" class="small text-muted">Terms of use.</a>
+										<a href="#!" class="small text-muted">Privacy policy</a>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
