--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,61 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<section class="vh-100" style="background-color: #60B2D5;">
+		<div class="container py-5 h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col col-xl-10">
+					<div class="card" style="border-radius: 1rem;">
+						<div class="row g-0 mt-5">
+							<div class="col-md-6 col-lg-5 d-none d-md-block">
+								<img src="https://i.guim.co.uk/img/media/cb7ad7983650acd1455e05dd0468a549e29885e1/0_448_6720_4032/master/6720.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=8b9674e92571760daa290011da3def41" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+							</div>
+							<div class="col-md-6 col-lg-7 d-flex align-items-center">
+								<div class="card-body p-4 p-lg-5 text-black">
+									<form method="post">
+                                        <div class="d-flex align-items-center mb-3 pb-1">
+											<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+											<span class="h1 fw-bold mb-0">Shopping Cart Login</span>
+										</div>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+										{% if error %}
+											<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+										{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+										{% if app.user %}
+											<div class="mb-3">
+												You are logged in as
+												{{ app.user.username }},
+												<a href="{{ path('app_logout') }}">Logout</a>
+											</div>
+										{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+										<label for="inputUsername">Username</label>
+										<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+										<label for="inputPassword">Password</label>
+										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+										<input
+										type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+										<div class="pt-1 mb-4">
+											<button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+										</div>
+									</form>
+										<p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account?
+											<a href="{{ path('app_register') }}" style="color: #393f81;">Register here</a>
+										</p>
+										<a href="#!" class="small text-muted">Terms of use.</a>
+										<a href="#!" class="small text-muted">Privacy policy</a>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
